# process_manager

./: .gitignore  404.html  README.md  calc_flow_example.py  cfe2.py  flow_initial.mmd  flow_system_design.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_unit_tests.sh  simple_flow.mmd  sitemap.xml  test.py  test3.py  test4.py  test5.py  testparallel.py  testparallel2.py  update_docs_and_push_changes.sh
.github/workflows/: publish.yml
design/named_values/: index.html
design/named_values_extensions/: index.html
design/python_metaclasses/: index.html
design/random_variables/: index.html
docs/: index.md  named_values.md  quickstart.md  random_variables.md
docs/design/: named_values_extensions.md  python_metaclasses.md
docs/guides/: data_handling.md  results_manager.md
examples/: async_results_manager_example.py  backend_switching_example.py  model_registry_examples.py  results_manager_example.py
for_reference/named_values_extensions/: index.html
named_values/: index.html
python_metaclasses/: index.html
quickstart/: index.html
random_outputs/: value_writer_2.txt  value_writer_3.txt  value_writer_4.txt  value_writer_5.txt  value_writer_6.txt  value_writer_7.txt  value_writer_8.txt  value_writer_9.txt
random_outputs_cpu/: value_writer_0.txt  value_writer_1.txt
random_variables/: index.html
sandbox/: t10.py  t11.py  t12.py  t13.py  t2.py  t3.py  t4.py  t5.py  t6.py  t7.py  t8.py  t9.py  test_serialization.py
search/: search_index.json
test/: test_data_handling_examples.py  test_named_values.py  test_random_variables.py
(+167 files in other folders)
