[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
license-file = "LICENSE"
dependencies = [
  "filelock",
  "flask",
  "jinja2",
  "pandas",
  "pydantic",
  "matplotlib",
  "numpy",
  "numpydantic",
  "scipy",
  "strenum",
  "supervisor",
  "waitress",
  "aiosqlite",
]
name = "pydantic_workflow"
version = "0.0.1"
requires-python = ">= 3.9"
authors = [
  {name = "Talbot Knighton", email = "talbotknighton@gmail.org"},
]
maintainers = [
  {name = "Talbot Knighton", email = "talbotknighton@gmail.org"},
]
description = "Tools for generating data products, storing, and interacting with them"
readme = "README.md"
keywords = ["Data", "Products", "Process", "Post", "Database"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",


  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

# [project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""
# Changelog = ""

# [project.scripts]
# pm_example = "process_manager.examples:example1"

[tool.pytest.ini_options]
asyncio_mode = "strict"